--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: devlopr
-subtitle: A Jekyll Theme Built for Developers
+title: yrhs-dev
+subtitle: Hyunsu's Growth Diary 
 description: >- # this means to ignore newlines until "baseurl:"
-  devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
+  Hyunsu is a developer who pursue the convergence of hardware, software & design. 
 
-url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
-baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://yrhs-dev.github.io" # the base hostname & protocol for your site, e.g. https://example.github.io
+baseurl: "/yrhs-dev" # the subpath of your site, e.g. /blog
 
 urls:
     - text: About Me
