--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Hyunsu is a developer who pursue the convergence of hardware, software & design. 
 
 url: "https://yrhs-dev.github.io" # the base hostname & protocol for your site, e.g. https://example.github.io
-baseurl: "/yrhs-dev" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 
 urls:
     - text: About Me
