--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: yrhs-dev
 subtitle: Hyunsu's Growth Diary 
 description: >- # this means to ignore newlines until "baseurl:"
-  Hyunsu is a developer who pursue the convergence of hardware, software & design. 
+  Hyunsu Jang is a developer who pursues the convergence of hardware, software & design. 
 
 url: "https://yrhs-dev.github.io" # the base hostname & protocol for your site, e.g. https://example.github.io
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/yrhs-dev" # the subpath of your site, e.g. /blog
 
 urls:
     - text: About Me
