--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ author_logo: profile.png
 author: Hyunsu Jang
 author_bio: Hello, Welcome to yrhs-dev(Hyunsu Jang)'s Blog. I built this site using devlopr-jekyll :D
 author_email: "travel_98@khu.ac.kr"
-author_location: South Korea
-author_website_url: null
+author_location: "South Korea"
+author_website_url: "https://www.instagram.com/yrhs.dev/"
 typewrite-text: I'm a developer who pursues the convergence of hardware, software & design. 
 
 author_work_experiences:
