--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ urls:
 author_logo: profile.png
 author: Hyunsu Jang
 author_bio: Hello, Welcome to yrhs-dev(Hyunsu Jang)'s Blog. I built this site using devlopr-jekyll :D
-author_email: travel_98@khu.ac.kr
+author_email: "travel_98@khu.ac.kr"
 author_location: South Korea
 author_website_url: null
 typewrite-text: I'm a developer who pursues the convergence of hardware, software & design. 
