--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,10 @@ urls:
 
 author_logo: profile.png
 author: Hyunsu Jang
-author_bio: Hello, Welcome to yrhs-dev(Hyunsu Jang)'s Blog. I'm a developer who pursues the convergence of hardware, software & design. :D
+author_bio: Hello, Welcome to yrhs-dev(Hyunsu Jang)'s Blog. / I'm a developer who pursues the convergence of hardware, software & design. :D
 author_email: "travel_98@khu.ac.kr"
 author_location: South Korea
-author_website_url: null
+author_website_url: instagram.com/yrhs.dev/
 typewrite-text: I'm a developer who pursues the convergence of hardware, software & design. 
 
 author_work_experiences:
