--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ urls:
 
 author_logo: profile.png
 author: Hyunsu Jang
-author_bio: Hello, Welcome to yrhs-dev(Hyunsu Jang)'s Blog. <br>I'm a developer who pursues the convergence of hardware, software & design. :D<br>
+author_bio: Hello, Welcome to Hyunsu Jang(yrhs-dev)'s Blog. <br>I'm a developer who pursues the convergence of hardware, software & design. :D<br>
 author_email: "travel_98@khu.ac.kr"
 author_location: South Korea
 author_website_url: "https://www.instagram.com/yrhs.dev/"
