--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: yrhs-dev
-subtitle: Hyunsu's Growth Diary 
+subtitle: yrhs-dev's Growth Blog 
 description: >- # this means to ignore newlines until "baseurl:"
-  Hyunsu Jang is a developer who pursues the convergence of hardware, software & design. 
+  Hyunsu Jang(yrhs-dev) is a developer who pursues the convergence of hardware, software & design. 
 
 url: "https://yrhs-dev.github.io" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
