--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,10 @@ urls:
 
 author_logo: profile.png
 author: Hyunsu Jang
-author_bio: Hello, Welcome to Hyunsu Jang(yrhs-dev)'s Blog. <br>I'm a developer who pursues the convergence of hardware, software & design. :D<br>
+author_bio: Hello, Welcome to Hyunsu Jang(yrhs-dev)'s Blog. 😀 <br>I'm a developer who pursues the convergence of hardware, software & design. 😎 :D<br>
 author_email: "travel_98@khu.ac.kr"
 author_location: South Korea
-author_website_url: "https://www.instagram.com/yrhs.dev/"
+author_website_url: "instagram.com/yrhs.dev/"
 typewrite-text: I'm a developer who pursues the convergence of hardware, software & design. 
 
 author_work_experiences:
