--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ urls:
 
 author_logo: profile.png
 author: Hyunsu Jang
-author_bio: Hello, Welcome to Hyunsu Jang(yrhs-dev)'s Blog. 😀 <br>I'm a developer who pursues the convergence of hardware, software & design. 😎 :D<br>
+author_bio: Hello, Welcome to Hyunsu Jang(yrhs-dev)'s Blog. 😀 <br>I'm a developer who pursues the convergence of hardware, software & design. 😎<br>
 author_email: "travel_98@khu.ac.kr"
 author_location: South Korea
 author_website_url: "instagram.com/yrhs.dev/"
@@ -67,7 +67,7 @@ author_project_details:
                 visibility: true
 
 # social links
-twitter_username: null
+twitter_username: yrhs_dev
 github_username:  yrhs-dev
 facebook_username: yrhs.dev
 linkedin_username: yrhs-dev
@@ -75,7 +75,7 @@ behance_username: null
 instagram_username: yrhs.dev
 medium_username: null
 telegram_username: null
-dribbble_username: null
+dribbble_username: yrhs-dev
 flickr_username: null
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
@@ -90,7 +90,7 @@ wakatime_username: yrhs-dev
 mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
 
 # formspree (contact form)
-formspree_email: johndoe@gmail.com
+formspree_email: travel_98@khu.ac.kr
 
 # syntax highlighter
 markdown: kramdown
