--- a/_config.yml
+++ b/_config.yml
@@ -33,10 +33,10 @@ author_website_url: "instagram.com/yrhs.dev/"
 typewrite-text: I'm a developer who pursues the convergence of hardware, software & design. 
 
 author_work_experiences:
-            - company_name: Korea Post
+            - company_name: Professional Logistician
               company_logo: korea.jpg
               company_url: https://www.epost.go.kr/main.retrieveMainPage.com
-              designation: Professional Logistician
+              designation: Korea Post
               description: Management of Supply Chain (SCM)
               visibility: true
             - company_name: Arranging documents using Excel
