--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ author_work_experiences:
               visibility: true
 
 author_education_details:
-              - college_logo: khu.png
+              - college_logo: khu_en.png
                 college_name: Bachelor of Engineering
                 college_url: http://www.khu.ac.kr/
                 college_degree: Kyung Hee University
