--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author_bio: Hello, Welcome to Hyunsu Jang(yrhs-dev)'s Blog. 😀 <br>I'm a devel
 <br>Also, I'm interested in technologies that help every one.<br>
 <br>I am a undergraduate student at Kyung Hee University, Department of IE, EE & CE. My major study is concentrated in Data Science📚 and Circuit Design🔌.<br>
 <br>My focus area lies in the convergence of Hardware🔌, Softeware💻 & Design🎨 like Apple🍎. 
-<br>I am also a research intern at Big Data Lab (Allbigdata) at KyungHee University🏛, under the supervision of Prof. ChangHo Chin.🧑🏻‍💼<br>
+<br>I am also a research intern at Big Data Lab (Allbigdata) at KyungHee University🏛, under the supervision of Prof. ChangHo Chin🧑🏻‍💼.<br>
 <br>I like to read books📚, watch movies🎬, go classical music conert🖼 and be on instagram🌊, and I love to collect some information related to A.I.🧑, Data Science📚 and Circuit Design🔌.<br> 
 
 author_email: "travel_98@khu.ac.kr"
