--- a/_config.yml
+++ b/_config.yml
@@ -27,11 +27,11 @@ urls:
 author_logo: profile.png
 author: Hyunsu Jang
 author_bio: Hello, Welcome to Hyunsu Jang(yrhs-dev)'s Blog. 😀 <br>I'm a developer who pursues the convergence of hardware, software & design. 😎<br>
-<br>Also, I'm interested in technologies that help every one.<br>
-<br>I am a undergraduate student at Kyung Hee University, Department of IE, EE & CE. My major study is concentrated in Data Science📚 and Circuit Design🔌.<br>
-<br>My focus area lies in the convergence of Hardware🔌, Softeware💻 & Design🎨 like Apple🍎. 
-<br>I am also a research intern at Big Data Lab (Allbigdata) at KyungHee University🏛, under the supervision of Prof. ChangHo Chin🧑🏻‍💼.<br>
-<br>I like to read books📚, watch movies🎬, go classical music conert🖼 and be on instagram🌊, and I love to collect some information related to A.I.🧑, Data Science📚 and Circuit Design🔌.<br> 
+Also, I'm interested in technologies that help every one.<br>
+I am a undergraduate student at Kyung Hee University, Department of IE, EE & CE. My major study is concentrated in Data Science📚 and Circuit Design🔌.<br>
+My focus area lies in the convergence of Hardware🔌, Softeware💻 & Design🎨 like Apple🍎. 
+I am also a research intern at Big Data Lab (Allbigdata) at KyungHee University🏛, under the supervision of Prof. ChangHo Chin🧑🏻‍💼.<br>
+I like to read books📚, go classical music conert🖼 and be on instagram🌊, and I love to collect some information related to A.I.🧑, Data Science📚 and Circuit Design🔌.<br> 
 
 author_email: "travel_98@khu.ac.kr"
 author_location: South Korea
@@ -65,11 +65,6 @@ author_project_details:
                 project_title: Gamers Hub
                 project_description: A Platform built for Gamers and Game Devs
                 project_url: https://gamershub.in
-                visibility: true
-              - project_thumbnail: hack4r.PNG
-                project_title: Hack4r
-                project_description: A Platform built for Hackers and Penetration Testers
-                project_url: https://hack4r.com
                 visibility: true
 
 # social links
