--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,9 @@ urls:
 
 author_logo: profile.png
 author: Hyunsu Jang
-author_bio: <p>Hello, Welcome to Hyunsu Jang(yrhs-dev)'s Blog. 😀 <br>I'm a developer who pursues the convergence of hardware, software & design. 😎<br>Also, I'm interested in technologies that help every one.<br>I am a undergraduate student at Kyung Hee University, Department of IE, EE & CE. My major study is concentrated in Data Science📚 and Circuit Design🔌.<br>
-My focus area lies in the convergence of Hardware🔌, Softeware💻 & Design🎨 like Apple🍎.<br>
-I am also a research intern at Big Data Lab (Allbigdata) at KyungHee University🏛, under the supervision of Prof. ChangHo Chin🧑🏻‍💼.<br>
+author_bio: <p>Hello, Welcome to Hyunsu Jang(yrhs-dev)'s Blog. 😀 | I'm a developer who pursues the convergence of hardware, software & design. 😎 | Also, I'm interested in technologies that help every one.<br>I am a undergraduate student at Kyung Hee University, Department of IE, EE & CE. My major study is concentrated in Data Science📚 and Circuit Design🔌.|
+My focus area lies in the convergence of Hardware🔌, Softeware💻 & Design🎨 like Apple🍎.|
+I am also a research intern at Big Data Lab (Allbigdata) at KyungHee University🏛, under the supervision of Prof. ChangHo Chin🧑🏻‍💼.|
 I like to read books📚, go classical music conert🖼 and be on instagram🌊, and I love to collect some information related to A.I.🧑, Data Science📚 and Circuit Design🔌.</p> 
 
 author_email: "travel_98@khu.ac.kr"
