--- a/_config.yml
+++ b/_config.yml
@@ -26,11 +26,11 @@ urls:
 
 author_logo: profile.png
 author: Hyunsu Jang
-author_bio: <p>Hello, Welcome to Hyunsu Jang(yrhs-dev)'s Blog. 😀|  I'm a developer who pursues the convergence of hardware, software & design. 😎| 
-Also, I'm interested in technologies that help every one.| I am a undergraduate student at Kyung Hee University, Department of IE, EE & CE.|
-My major study is concentrated in Data Science📚 and Circuit Design🔌.|
-My focus area lies in the convergence of Hardware🔌, Softeware💻 & Design🎨 like Apple🍎.|
-I am also a research intern at Big Data Lab (Allbigdata) at KyungHee University🏛, under the supervision of Prof. ChangHo Chin🧑🏻‍💼.|
+author_bio: <p>Hello, Welcome to Hyunsu Jang(yrhs-dev)'s Blog. 😀  I'm a developer who pursues the convergence of hardware, software & design. 😎  
+Also, I am a undergraduate student at Kyung Hee University, Department of IE, EE & CE.  
+My major study is concentrated in Data Science📚 and Circuit Design🔌.  
+My focus area lies in the convergence of Hardware🔌, Softeware💻 & Design🎨 like Apple🍎.  
+I am also a research intern at Big Data Lab (Allbigdata) at KyungHee University🏛, under the supervision of Prof. ChangHo Chin🧑🏻‍💼.  
 I like to read books📚, go classical music conert🖼 and be on instagram🌊, and I love to collect some information related to A.I.🧑, Data Science📚 and Circuit Design🔌.</p> 
 
 author_email: "travel_98@khu.ac.kr"
@@ -93,7 +93,7 @@ hyvor_talk_website_id: 476
 wakatime_username: yrhs-dev
 
 # mailchimp embedded form url (newsletter):
-mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
+# mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
 
 # formspree (contact form)
 formspree_email: travel_98@khu.ac.kr
