--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ urls:
 
 author_logo: profile.png
 author: Hyunsu Jang
-author_bio: Hello, Welcome to Hyunsu Jang(yrhs-dev)'s Blog. 😀  I'm a developer who pursues the convergence of hardware, software & design. 😎
+author_bio: Hello, Welcome to Hyunsu Jang(yrhs-dev)'s Blog. 😀  I'm a developer who pursues the convergence of hardware, software & design. 😎  |
 Also, I am a undergraduate student at Kyung Hee University, Department of IE, EE & CE.  | 
 My major study is concentrated in Data Science📚 and Circuit Design🔌. | 
 My focus area lies in the convergence of Hardware🔌, Softeware💻 & Design🎨 like Apple🍎.  | 
