--- a/_config.yml
+++ b/_config.yml
@@ -11,27 +11,29 @@ urls:
       url: /about
     - text: Blog
       url: /blog
+    - text: Hardware
+      url: /hardware
+    - text: Software
+      url: /software
+    - text: Design
+      url: /design
     - text: Gallery
       url: /gallery
-    - text: Shop
-      url : /shop
+    - text: Plan
+      url: /Plan
     - text: Contact Me
       url : /contact
-    - text: Styleguide
-      url: /styleguide
-    - text: Get Started
-      url: /get-started
 
 # Edit these details
 
 author_logo: profile.png
 author: Hyunsu Jang
-author_bio: Hello, Welcome to Hyunsu Jang(yrhs-dev)'s Blog. 😀  I'm a developer who pursues the convergence of hardware, software & design. 😎 
-Also, I am a undergraduate student at Kyung Hee University, Department of IE, EE & CE.  
-My major study is concentrated in Data Science📚 and Circuit Design🔌. 
-My focus area lies in the convergence of Hardware🔌, Softeware💻 & Design🎨 like Apple🍎.  
-I am also a research intern at Big Data Lab (Allbigdata) at KyungHee University🏛, under the supervision of Prof. ChangHo Chin🧑🏻‍💼.  
-I like to read books📚, go classical music conert🖼 and be on instagram🌊, and I love to collect some information related to A.I.🧑, Data Science📚 and Circuit Design🔌.
+author_bio: <p>Hello, Welcome to Hyunsu Jang(yrhs-dev)'s Blog. 😀| I'm a developer who pursues the convergence of hardware, software & design. 😎| 
+Also, I am a undergraduate student at Kyung Hee University, Department of IE, EE & CE.|  
+My major study is concentrated in Data Science📚 and Circuit Design🔌.| 
+My focus area lies in the convergence of Hardware🔌, Softeware💻 & Design🎨 like Apple🍎.|  
+I am also a research intern at Big Data Lab (Allbigdata) at KyungHee University🏛, under the supervision of Prof. ChangHo Chin🧑🏻‍💼.|  
+I like to read books📚, go classical music conert🖼 and be on instagram🌊, and I love to collect some information related to A.I.🧑, Data Science📚 and Circuit Design🔌.|</p>
 
 author_email: "travel_98@khu.ac.kr"
 author_location: South Korea
