--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ urls:
 
 author_logo: profile.png
 author: Hyunsu Jang
-author_bio: <p>Hello, Welcome to Hyunsu Jang(yrhs-dev)'s Blog. 😀| I'm a developer who pursues the convergence of hardware, software & design. 😎| Also, I am a undergraduate student at Kyung Hee University, Department of IE, EE & CE.
+author_bio: <p>Hello, Welcome to Hyunsu Jang(yrhs-dev)'s Blog. 😀 <pr>I'm a developer who pursues the convergence of hardware, software & design. 😎</pr> Also, I am a undergraduate student at Kyung Hee University, Department of IE, EE & CE.
 author_email: "travel_98@khu.ac.kr"
 author_location: South Korea
 author_website_url: "instagram.com/yrhs.dev/"
