--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ urls:
 
 author_logo: profile.png
 author: Hyunsu Jang
-author_bio: <p>Hello, Welcome to Hyunsu Jang(yrhs-dev)'s Blog. 😀<br> I'm a developer who pursues the convergence of hardware, software & design. 😎<br> Also, I am a undergraduate student at Kyung Hee University, Department of IE, EE & CE.</p>
+author_bio: <p>Hello, Welcome to Hyunsu Jang(yrhs-dev)'s Blog. 😀<br> I'm a developer who pursues the convergence of hardware, software & design. 😎<br> Also, I am a undergraduate student at Kyung Hee University🏛, Department of IE, EE & CE.<br>My major study is concentrated in Data Science📚 and Circuit Design🔌.<br>I am also a research intern at Big Data Lab (Allbigdata) at KyungHee University🏛, under the supervision of Prof. ChangHo Chin🧑🏻 💼.<br>My focus area lies in the convergence of Hardware🔌, Softeware💻 & Design🎨 like Apple🍎.</p>
 author_email: "travel_98@khu.ac.kr"
 author_location: South Korea
 author_website_url: "instagram.com/yrhs.dev/"
