--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ urls:
 
 author_logo: profile.png
 author: Hyunsu Jang
-author_bio: <p>Hello, Welcome to Hyunsu Jang(yrhs-dev)'s Blog. 😀<br> I'm a developer who pursues the convergence of hardware, software & design. 😎<br> Also, I am a undergraduate student at Kyung Hee University🏛, Department of IE, EE & CE.<br>My major study is concentrated in Data Science📚 and Circuit Design🔌.<br>I am also a research intern at Big Data Lab (Allbigdata) at KyungHee University🏛, under the supervision of Prof. ChangHo Chin🧑🏻 💼.<br>My focus area lies in the convergence of Hardware🔌, Softeware💻 & Design🎨 like Apple🍎.</p>
+author_bio: <p>Hello, Welcome to Hyunsu Jang(yrhs-dev)'s Blog. 😀<br> I'm a developer who pursues the convergence of hardware, software & design. 😎<br> Also, I am a undergraduate student at Kyung Hee University🏛, Department of IE, EE & CE.<br>My major study is concentrated in Data Science📚 and Circuit Design🔌.<br>I am also a research intern at Big Data Lab (Allbigdata) at KyungHee University🏛, under the supervision of Prof. ChangHo Chin🧑🏻.<br>My focus area lies in the convergence of Hardware🔌, Softeware💻 & Design🎨 like Apple🍎.<br>I like to read books📚, go classical music conert🖼 and be on instagram🌊, and I love to collect some information related to A.I.🧑, Data Science📚 and Circuit Design🔌</p>
 author_email: "travel_98@khu.ac.kr"
 author_location: South Korea
 author_website_url: "instagram.com/yrhs.dev/"
@@ -49,7 +49,7 @@ author_work_experiences:
               visibility: true
 
 author_education_details:
-              - college_logo: khu_en.png
+              - college_logo: khu_kr.png
                 college_name: Bachelor of Engineering
                 college_url: http://www.khu.ac.kr/
                 college_degree: Kyung Hee University
@@ -57,10 +57,15 @@ author_education_details:
                 visibility: true
 
 author_project_details:
-              - project_thumbnail: gamershub.png
-                project_title: Gamers Hub
-                project_description: A Platform built for Gamers and Game Devs
-                project_url: https://gamershub.in
+              - project_thumbnail: dust_prediction.png
+                project_title: Prediction of Air pollution using deep learning(LSTM) 
+                project_description: The project was selected for excellent project in Web&Python Programming class, Kyung Hee University.<br>  Also, the project was selected as an excellent project for SW Convergence Scholarship in SW-Centered Business Group, Kyung Hee University.
+                project_url: https://khlug.org/group/50005
+                visibility: true
+              - project_thumbnail: SMAP.png
+                project_title: Prediction of Stock Market Analysis(SMAP) 
+                project_description: The project was selected for excellent project in Khlug, Kyung Hee University.
+                project_url: https://khlug.org/group/46639
                 visibility: true
 
 # social links
