--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ author_work_experiences:
 
 author_education_details:
               - college_logo: khu_kr.png
-                college_name: Bachelor of Engineering
+                college_name: A undergraduate student
                 college_url: http://www.khu.ac.kr/
                 college_degree: Kyung Hee University
                 description:  IE, EE & CE
