--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,9 @@ author_logo: profile.png
 author: Hyunsu Jang
 author_bio: <p>Hello, Welcome to Hyunsu Jang(yrhs-dev)'s Blog. 😀<br> I'm a developer who pursues the convergence of hardware, software & design. 😎<br> Also, I am a undergraduate student at Kyung Hee University🏛, Department of IE, EE & CE.<br>My major study is concentrated in Data Science📚 and Circuit Design🔌.<br>I am also a research intern at Big Data Lab (Allbigdata) at KyungHee University🏛, under the supervision of Prof. ChangHo Chin🧑🏻.<br>My focus area lies in the convergence of Hardware🔌, Softeware💻 & Design🎨 like Apple🍎.<br>I like to read books📚, go classical music conert🖼 and be on instagram🌊, and I love to collect some information related to A.I.🧑, Data Science📚 and Circuit Design🔌</p>
 author_email: "travel_98@khu.ac.kr"
-author_location: South Korea
+author_location: Suwon, South Korea
 author_website_url: "instagram.com/yrhs.dev/"
+author_google_scholar: 
 typewrite-text: I'm a developer who pursues the convergence of hardware, software & design. 
 
 author_work_experiences:
@@ -48,7 +49,7 @@ author_work_experiences:
               description: Worked on various excel business
               visibility: true
 
-author_education_details:
+author_🎓 education_details:
               - college_logo: khu_kr.png
                 college_name: A undergraduate student
                 college_url: http://www.khu.ac.kr/
