--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ author_work_experiences:
               description: Worked on various excel business
               visibility: true
 
-author_🎓 education_details:
+author_🎓education_details:
               - college_logo: khu_kr.png
                 college_name: A undergraduate student
                 college_url: http://www.khu.ac.kr/
@@ -102,7 +102,7 @@ permalink: pretty
 
 # Choose what to show ( can be true or false)
 show_author_work_experiences: true
-show_author_education_details: true
+show_author_🎓education_details: true
 show_author_project_details: true
 
 # pagination of posts
