--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ author_project_details:
 
 author_award_details:
                 award_title: 🏆 [FIELD Camp 2020 Excellence award]
-                award_description: In KIIE: Korean Institute of Industrial Engineers, August 2020
+                award_description:  In KIIE, Korean Institute of Industrial Engineers, August 2020
                 award_url: http://kiie.org/
                 visibility: true
 
