--- a/_config.yml
+++ b/_config.yml
@@ -35,13 +35,51 @@ author_website_url: "instagram.com/yrhs.dev/"
 author_google_scholar: 
 typewrite-text: I'm a developer who pursues the convergence of hardware, software & design. 
 
+author_education_details:
+              - college_logo: khu_kr.png
+                college_name: A undergraduate student
+                college_url: http://www.khu.ac.kr/
+                college_degree: 🎓 Kyung Hee University
+                description:  IE, EE & CE
+                visibility: true
+                
+author_clubs:
+              - college_logo: khlug.jpg
+                company_name: Representative director
+                college_url: https://khlug.org/
+                designation: 👨‍💻 KHLUG, Kyung Hee University
+                description:  
+                visibility: true
+                
+              - college_logo: vip.png
+                company_name:  Executive Advisor
+                college_url: https://www.facebook.com/VIPKHU2020
+                designation: 👨🏻‍🏫 VIP, Kyung Hee University
+                description:  
+                visibility: true
+                
+              - college_logo: d2.png
+                company_name: Campus Partner
+                college_url: https://d2.naver.com/home
+                designation: 👨‍💻 2019 Naver D2 
+                description:  Representative director of Kyung Hee University
+                visibility: true
+              
+              - college_logo: field..jpg
+                company_name: Future Industrial Engineering Leaders and Dreamers
+                college_url: https://www.facebook.com/iefield
+                designation: 👨‍👨‍👦‍👦 FIELD, in KIIE
+                description: 12th Competition Team & 
+                visibility: true
+
 author_work_experiences:
-            - company_name: 📮 Professional Logistician
+            - company_name: Professional Logistician
               company_logo: korea.jpg
               company_url: https://www.epost.go.kr/
               designation: 📮 Korea Post
               description: Management of Supply Chain (SCM)
               visibility: true
+              
             - company_name: Arranging documents using Excel
               company_logo: khu_linc.png
               company_url: http://lincplus.khu.ac.kr/
@@ -49,13 +87,7 @@ author_work_experiences:
               description: 🖥 Worked on various excel business
               visibility: true
 
-author_education_details:
-              - college_logo: khu_kr.png
-                college_name: 🎓 A undergraduate student
-                college_url: http://www.khu.ac.kr/
-                college_degree: 🎓 Kyung Hee University
-                description:  IE, EE & CE
-                visibility: true
+
 
 author_project_details:
               - project_thumbnail: dust_prediction.png
