--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ author_education_details:
                 
 author_clubs:
               - college_logo: khlug.jpg
-                company_name: 
+                company_name: Kyung Hee Linux User Group
                 college_url: https://khlug.org/
                 designation: 👨‍💻 KHLUG, Kyung Hee University
                 description: Representative director
