--- a/_config.yml
+++ b/_config.yml
@@ -157,6 +157,7 @@ show_author_work_experiences: true
 show_author_education_details: true
 show_author_project_details: true
 show_author_award_details: true
+show_author_clubs: true
 
 # pagination of posts
 paginate: 4
